--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <!-- header start -->
         <header>
             <div class="logo">
-                <img src="./imgaes/logo.png" alt="G-shock logo" />
+                <a href="#"
+                    ><img src="./imgaes/logo.png" alt="G-shock logo"
+                /></a>
             </div>
             <nav>
                 <ul>
