--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- header start -->
         <header>
             <div class="logo">
-                <a href="#"
+                <a href="javascript:history.go(0)"
                     ><img src="./imgaes/logo.png" alt="G-shock logo"
                 /></a>
             </div>
